2000-12-26  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* capplet-dir-view*.c: new html view, and split other views into
	seperate parts

2000-10-14  Bradford Hovinen  <hovinen@helixcode.com>

	Courtesy John B Tunison <jtunison@andrew.cmu.edu>:
	* capplet-dir.c (start_capplet_through_root_manager): Use
	FOPEN_MAX rather than OPEN_MAX, since some people don't seem to be
	have OPEN_MAX defined by default

2000-08-22  Bradford Hovinen  <hovinen@helixcode.com>

	* Makefile.am (INCLUDES): Changed SETTINGS_DIR to
	$(datadir)/control-center

2000-08-17  Stanislav Brabec  <utx@penguin.cz>

	* Makefile.am: Added GNOME_LIBDIR to root_manager_LDADD.

2000-08-11  Bradford Hovinen  <hovinen@helixcode.com>

	* all: First checkin of (nearly) complete rewrite. Changes too
	numerous to mention. 
